// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing VideoPlayer Component it renders given an empty video object 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <VideoPlayer
    selectedVideo={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="player embed-responsive embed-responsive-16by9"
        >
          <iframe
            allowFullScreen={true}
            className="embed-responsive-item"
            src={undefined}
          />
        </div>,
        <div
          className="video-details"
        >
          <h4
            className="video-title"
          >
            
          </h4>
          <p
            className="video-description"
          >
            
          </p>
        </div>,
      ],
      "className": "videoPlayer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <iframe
            allowFullScreen={true}
            className="embed-responsive-item"
            src={undefined}
          />,
          "className": "player embed-responsive embed-responsive-16by9",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "allowFullScreen": true,
            "className": "embed-responsive-item",
            "src": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "iframe",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4
              className="video-title"
            >
              
            </h4>,
            <p
              className="video-description"
            >
              
            </p>,
          ],
          "className": "video-details",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "video-title",
            },
            "ref": null,
            "rendered": "",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "video-description",
            },
            "ref": null,
            "rendered": "",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="player embed-responsive embed-responsive-16by9"
          >
            <iframe
              allowFullScreen={true}
              className="embed-responsive-item"
              src={undefined}
            />
          </div>,
          <div
            className="video-details"
          >
            <h4
              className="video-title"
            >
              
            </h4>
            <p
              className="video-description"
            >
              
            </p>
          </div>,
        ],
        "className": "videoPlayer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <iframe
              allowFullScreen={true}
              className="embed-responsive-item"
              src={undefined}
            />,
            "className": "player embed-responsive embed-responsive-16by9",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "allowFullScreen": true,
              "className": "embed-responsive-item",
              "src": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "iframe",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4
                className="video-title"
              >
                
              </h4>,
              <p
                className="video-description"
              >
                
              </p>,
            ],
            "className": "video-details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "video-title",
              },
              "ref": null,
              "rendered": "",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "video-description",
              },
              "ref": null,
              "rendered": "",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing VideoPlayer Component renders the VideoPlayer Component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <VideoPlayer
    selectedVideo={
      Object {
        "id": Object {
          "videoId": 1234,
        },
        "snippet": Object {
          "description": "some description",
          "title": "some title",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="player embed-responsive embed-responsive-16by9"
        >
          <iframe
            allowFullScreen={true}
            className="embed-responsive-item"
            src="https://www.youtube.com/embed/1234"
          />
        </div>,
        <div
          className="video-details"
        >
          <h4
            className="video-title"
          >
            some title
          </h4>
          <p
            className="video-description"
          >
            some description
          </p>
        </div>,
      ],
      "className": "videoPlayer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <iframe
            allowFullScreen={true}
            className="embed-responsive-item"
            src="https://www.youtube.com/embed/1234"
          />,
          "className": "player embed-responsive embed-responsive-16by9",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "allowFullScreen": true,
            "className": "embed-responsive-item",
            "src": "https://www.youtube.com/embed/1234",
          },
          "ref": null,
          "rendered": null,
          "type": "iframe",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4
              className="video-title"
            >
              some title
            </h4>,
            <p
              className="video-description"
            >
              some description
            </p>,
          ],
          "className": "video-details",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some title",
              "className": "video-title",
            },
            "ref": null,
            "rendered": "some title",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "some description",
              "className": "video-description",
            },
            "ref": null,
            "rendered": "some description",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="player embed-responsive embed-responsive-16by9"
          >
            <iframe
              allowFullScreen={true}
              className="embed-responsive-item"
              src="https://www.youtube.com/embed/1234"
            />
          </div>,
          <div
            className="video-details"
          >
            <h4
              className="video-title"
            >
              some title
            </h4>
            <p
              className="video-description"
            >
              some description
            </p>
          </div>,
        ],
        "className": "videoPlayer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <iframe
              allowFullScreen={true}
              className="embed-responsive-item"
              src="https://www.youtube.com/embed/1234"
            />,
            "className": "player embed-responsive embed-responsive-16by9",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "allowFullScreen": true,
              "className": "embed-responsive-item",
              "src": "https://www.youtube.com/embed/1234",
            },
            "ref": null,
            "rendered": null,
            "type": "iframe",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4
                className="video-title"
              >
                some title
              </h4>,
              <p
                className="video-description"
              >
                some description
              </p>,
            ],
            "className": "video-details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "some title",
                "className": "video-title",
              },
              "ref": null,
              "rendered": "some title",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "some description",
                "className": "video-description",
              },
              "ref": null,
              "rendered": "some description",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
